# minesweeper-c

./: .clangd  CMakeLists.txt  README.md  border.cpp  border.h  local-build.sh  main.cpp  main.h  utils.h
.github/workflows/: PIPELINE_SECRETS.md  build-and-deploy-to-marketplaces.yml
gog/: pipeline.json
steam/: app_build.vdf
